--- a/signup.html
+++ b/signup.html
@@ -1,33 +1,44 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Gusgram - Sua rede social</title>
+    <title>Faça o seu cadastro - Gusgram</title>
 </head>
+
 <body>
     <div id="wrapper">
-        <div id="container">
-            <div class="column left">
-                <div class="main">   
-                     
-                </div>
-            </div>
-            <div class="column right">
+        <div id="container-signup">
+            <div class="column">
                 <div class="login-painel">
                     <div class="logo">
-                        <img class="logo-img" src="./assets/ChatGPT Image 30_03_2025, 14_53_43 1 (1)-Photoroom.png" alt="logo-gusgram">
+                        <img class="logo-img" src="./assets/ChatGPT Image 30_03_2025, 14_53_43 1 (1)-Photoroom.png"
+                            alt="logo-gusgram">
+                    </div>
+                    <div class="message">
+                        <span>Cadastre-se para ver fotos e vídeos dos seus amigos.</span>
+                    </div>
+                    <button class="cta-button">
+                        Entrar com Facebook
+                    </button>
+                    <div class="divisor-container">
+                        <div class="line"></div>
+                        <div class="divisor-tag">ou</div>
+                        <div class="line"></div>
                     </div>
                     <form action="">
-                        <input type="text" placeholder="Telefone, usuário ou email" name="username" required>
-                        <input type="password" placeholder="Senha" name="password" required>
+                        <input type="text" placeholder="Número do celular ou email" name="email" required>
+                        <input type="text" placeholder="Nome completo" name="name" required>
+                        <input type="text" placeholder="Nome do usuário" name="username">
+                        <input type="password" placeholder="Senha" name="senha">
 
                         <input type="submit" value="Entrar">
                     </form>
                 </div>
                 <div class="infobox">
-                    <p>Não possui uma conta?<a href="signup.html">Cadastre-se</a></p>
+                    <p>Tem uma conta?<a href="index.html">Conecte-se</a></p>
                 </div>
                 <div class="get-app-painel">
                     Obtenha o aplicativo
@@ -61,4 +72,5 @@
         </footer>
     </div>
 </body>
+
 </html>
